# calculator

./: ANDROID_BUILD_TROUBLESHOOTING.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  build_android.py  build_exe.py  buildozer.spec  calculator.py  calculator_mobile.py  main.py  pyproject.toml  requirements.txt  requirements_android.txt  requirements_dev.txt  test_calculator.py  打包.bat  检查Android构建.bat  计算器.spec
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-android.yml  security.yml
calculator/: README.md  build_android.py  buildozer.spec  calculator_mobile.py  main.py  requirements.txt  requirements_android.txt  test_calculator.py  检查Android构建.bat
